[package]
name = "sprint-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
gitlab = "0.1800.0"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
reqwest = "0.12.20"
rayon = "1.10.0"
dashmap = "7.0.0-rc2"
