[package]
name = "sprint-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.20", features = ["json"] }
dashmap = "7.0.0-rc2"
serde_json = "1.0.140"
